@@ -90,6 +90,7 @@ Version 1.5
  - Add Aeotec ZW130 WallMote Quad (Nechry)
  - Pull Request #959 - Add LB60Z-1 Dimmable LED Light Bulb from KyleARector (Nechry)
  - Add NorthQ  NQ-9021 Power Reader config file  (Nechry)
+ - Add Z-Wave.Me ZME_064381 Wall Plug switch Schuko (IP44) - Gen 5 (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
